=======================================

	Version 1.5.4 - UNRELEASED:
	--------------------------------------------
		* Fixed Mass Storage Host demo's MassStore_SendCommand() delay in the incorrect place
		* Fixed USBtoSerial demo not calling ReconfigureUSART() after a change in the line encoding
		* Fixed infinite loop in host mode Host-to-Device control transfers with data stages

	Version 1.5.3 - Released 2nd October, 2008:
	--------------------------------------------
		* Fixed CDC bootloader using pgmspace macros for some descriptors inappropriately
		* Updated all Mouse and Keyboard device demos to include boot protocol support (now works in BIOS)
		* Renamed bootloader directories to remove spaces, which were causing build problems on several OSes
		* Removed serial number strings from all but the MassStore demo where it is required - users were not
		  modifing the code to either ommit the descriptor or use a unique serial per device causing problems
		  when multiple units of the same device were plugged in at the same time
		* AudioOutput and AudioInput demos now correctly silence endpoints when not enabled by the host
		* Added KeyboardMouse demo (Keyboard and Mouse functionality combined into a single demo)
		* Added DriverStubs directory to house board level driver templates, to make MyUSB compatible custom board
		  driver creation easier
		* Extended MassStorage demo to support multiple LUNs, 2 by default
		* Fixed incorrect device address mask, preventing the device from enumerating with addresses larger than 63
		* Fixed incorrect data direction mask in the GetStatus standard request, preventing it from being handled
		* Fixed incorrect GetStatus standard request for endpoints, now returns the endpoint STALL status correctly
		* Added in new USB_RemoteWakeupEnabled and USB_CurrentlySelfPowered flags rather than using fixed values
		* Added DualCDC demo to demonstrate the use of Interface Association Descriptors