@@ -78,7 +78,7 @@
 				                                        *   request transfer.
 				                                        */
 				HOST_SENDCONTROL_PipeError        = 2, /**< An error occured in the pipe while sending the request. */
-				HOST_SENDCONTROL_SetupStalled     = 3, /**< The attached device stalled the request, unusally
+				HOST_SENDCONTROL_SetupStalled     = 3, /**< The attached device stalled the request, usually
 				                                        *   indicating that the request is unsupported on the device.
 				                                        */
 				HOST_SENDCONTROL_SoftwareTimeOut  = 4, /**< The request or data transfer timed out. */
